[package]
name = "todo-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.0"
router = "0.6.0"
clap = "2.29.0"
persistent = "0.4.0"
bodyparser = "0.8.0"
serde = "1.0.25"
serde_json = "1.0.8"
serde_derive = "1.0.25"
log = "0.4.14"